--- a/app/src/main/res/layout/fragment_main_clicker.xml
+++ b/app/src/main/res/layout/fragment_main_clicker.xml
@@ -6,14 +6,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainClicker">
 
-    <View
-        android:id="@+id/coloured_view"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:background="@drawable/skyimage"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <View
+            android:id="@+id/sky_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@drawable/skyimage" />
+
+        <View
+            android:id="@+id/ground_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:background="@drawable/dirt_image" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
