--- a/app/src/main/res/layout/fragment_main_clicker.xml
+++ b/app/src/main/res/layout/fragment_main_clicker.xml
@@ -3,11 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mainClickerConstraintLayout"
     tools:context=".MainClicker">
 
 
     <LinearLayout
+        android:id="@+id/LinearLayout_within_constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
