nu sparas alla clicks

--- a/app/src/main/res/layout/fragment_main_clicker.xml
+++ b/app/src/main/res/layout/fragment_main_clicker.xml
@@ -28,7 +28,22 @@
             android:layout_height="0dp"
             android:layout_weight="3"
             android:background="@drawable/dirt_image" />
+
+
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/click_counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="Clicks: "
+        android:textSize="24sp"
+        android:textColor="@color/white"
+        android:background="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
