--- a/app/src/main/res/layout/fragment_upgrades.xml
+++ b/app/src/main/res/layout/fragment_upgrades.xml
@@ -7,11 +7,14 @@
     android:layout_height="match_parent"
     android:background="@drawable/blackboard"
     tools:context=".Upgrades">
+
+
+
     <TextView
         android:id="@+id/textUpgradesTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="UPGRADES"
+        android:text="@string/upgradesTitle"
         android:textSize="28sp"
         android:textStyle="bold"
         android:textColor="@color/white"
@@ -24,7 +27,7 @@
         android:id="@+id/textCurrentMultiplierLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Current Multiplier"
+        android:text="@string/current_multiplier"
         android:textSize="14sp"
         android:textColor="@color/white"
         android:paddingTop="16dp"
@@ -36,7 +39,7 @@
         android:id="@+id/textCurrentMultiplierValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="x1.0"
+        android:text="@string/current_multiplier_VALUE"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/white"
@@ -50,10 +53,31 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/textUpgradesTitle"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/item_upgrade"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textUpgradesTitle"
+        tools:listitem="@layout/item_upgrade" />
+
+    <TextView
+        android:id="@+id/currentMetersXMLtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current meters"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/textUpgradesTitle"
+        app:layout_constraintEnd_toStartOf="@+id/textUpgradesTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/meterValueXML"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Meter value"
+        app:layout_constraintBottom_toBottomOf="@+id/textUpgradesTitle"
+        app:layout_constraintEnd_toStartOf="@+id/textUpgradesTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/currentMetersXMLtext" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
