lagt till settings i bottom nav bar istället

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,4 +15,9 @@
         android:id="@+id/upgrades"
         android:icon="@drawable/upgrade_icon"
         android:title="Upgrades"/>
+
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/settings_symbol"
+        android:title="Settings"/>
 </menu>
