fixade buggar med nav till settings, ändrade textfel på spelytan, nu finns det passiv inkomst, OBSpassiv inkomst är buggad då det skapas för många timers när den startar, behöver mer arbete

--- a/app/src/main/res/layout/fragment_main_clicker.xml
+++ b/app/src/main/res/layout/fragment_main_clicker.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Clicks: "
+        android:text="Meters:"
         android:textSize="24sp"
         android:textColor="@color/white"
         android:background="@color/black"
@@ -49,5 +49,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/meterPerSecondsCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@color/black"
+        android:text="Meters per second: "
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/click_counter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
