--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -9,21 +9,23 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Leaderboard"
-        android:textSize="24sp"
+        android:text="@string/leaderboard_title"
+        android:textSize="28sp"
         android:textStyle="bold"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="12dp"/>
 
     <Button
         android:id="@+id/createAccountButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Skapa Konto"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/skapa_konto"
         android:layout_marginBottom="12dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/leaderboardRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
