--- a/app/src/main/res/layout/fragment_upgrades.xml
+++ b/app/src/main/res/layout/fragment_upgrades.xml
@@ -28,24 +28,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/current_multiplier"
-        android:textSize="14sp"
         android:textColor="@color/white"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textUpgradesTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textUpgradesTitle"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/textCurrentMultiplierValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/current_multiplier_VALUE"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         android:textColor="@color/white"
-        android:paddingEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/textCurrentMultiplierLabel"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/textUpgradesTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textUpgradesTitle"
+        app:layout_constraintTop_toBottomOf="@id/textCurrentMultiplierLabel" />
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -63,8 +65,9 @@
         android:id="@+id/currentMetersXMLtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Current meters"
+        android:text="@string/current_meters"
         android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/textUpgradesTitle"
         app:layout_constraintEnd_toStartOf="@+id/textUpgradesTitle"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +77,10 @@
         android:id="@+id/meterValueXML"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Meter value"
+        android:text="@string/current_meters_VALUE"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/textUpgradesTitle"
         app:layout_constraintEnd_toStartOf="@+id/textUpgradesTitle"
         app:layout_constraintStart_toStartOf="parent"
