--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/blackboard"
     android:padding="16dp">
 
     <TextView
@@ -12,6 +13,7 @@
         android:text="@string/leaderboard_title"
         android:textSize="28sp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="12dp"/>
 
