--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -21,7 +21,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
+    <SeekBar
+        android:id="@+id/musicVolumeSlider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100"
+        app:layout_constraintBottom_toTopOf="@+id/resetButton"
+        app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />
 
     <Button
         android:id="@+id/resetButton"
