--- a/app/src/main/res/layout/item_upgrade.xml
+++ b/app/src/main/res/layout/item_upgrade.xml
@@ -52,6 +52,7 @@
         android:id="@+id/upgradeButton"
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:text="Buy"
+        android:backgroundTint="#9fa42d"
+        android:text="@string/buy"
         android:layout_height="wrap_content"/>
 </LinearLayout>
