--- a/app/src/main/res/layout/item_leaderboard_row.xml
+++ b/app/src/main/res/layout/item_leaderboard_row.xml
@@ -9,18 +9,21 @@
         android:id="@+id/rankText"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/nameText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:textColor="#FFFFFF"/>
 
     <TextView
         android:id="@+id/scoreText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"/>
 
 </LinearLayout>
