--- a/app/src/main/res/layout/fragment_main_clicker.xml
+++ b/app/src/main/res/layout/fragment_main_clicker.xml
@@ -19,14 +19,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@drawable/skyimage" />
+            android:background="@drawable/mountain_view" />
 
         <View
             android:id="@+id/ground_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:background="@drawable/dirt_image" />
+            android:background="@drawable/earth" />
 
     </LinearLayout>
 
@@ -53,6 +53,7 @@
         android:text="@string/meters_per_second"
         android:textColor="@color/white"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/click_counter" />
